<resources>
    <string name="app_name">TIN TỨC MỚI - NO NAME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_log_in">Đăng nhập</string>
    <string name="title_activity_register">Đăng ký</string><!-- LogInActivity-->
    <string name="login_error_message">Vui lòng nhập đúng tên đăng nhập và tài khoản!</string>
    <string name="login_error_title">Checking</string>
    <string name="title_activity_chat">Chat</string><!-- RegisterActivity-->
    <string name="register_error_message">Vui lòng điền đầy đủ thông tin về tên, email, mật khẩu!</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="usernameEmail">Địa chỉ Email</string>
    <string name="name">Tên hiển thị</string>
    <string name="password"> Mật khẩu</string>
    <string name="passwordCheck">Nhập lại mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="cancel">Thoát</string>
    <string name="log_in">Đăng nhập</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_drawer_">Drawer_Activity</string>
    <string name="title_activity_navigation_">Navigation_Activity</string>
    <string name="err_email">Email không hợp lệ, vui lòng nhập lại</string>
    <string name="err_name">Họ và tên không hợp lệ, vui lòng nhập lại</string>
    <string name="err_phone">Số điện thoại không hợp lệ, vui lòng nhập lại</string>
    <string name="err_location">Địa chỉ không hợp lệ, vui lòng nhập lại</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
