<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.duyle.news.GuestRegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayoute
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/pad_20dp"
            android:paddingLeft="@dimen/pad_15dp"
            android:paddingRight="@dimen/pad_15dp"
            android:paddingTop="@dimen/pad_20dp">

            <TextView
                style="@style/Base.Widget.AppCompat.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/pad_20dp"
                android:text="Đăng ký tài khoản"
                android:textColor="@color/main_color_green"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/ed_name"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:drawableLeft="@drawable/ic_name"
                android:hint="@string/name"
                android:inputType="text">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/ed_email"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_email"
                android:hint="@string/usernameEmail"
                android:inputType="textEmailAddress">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/ed_password"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/ed_phone"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="Số điện thoại"
                android:inputType="number">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/ed_location"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:drawableLeft="@drawable/icon_coutry"
                android:hint="Địa chỉ"
                android:inputType="text"></EditText>

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp" />


            <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/accent"
                    android:text="@string/register" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:layout_weight="1"
                    android:background="@color/accent"
                    android:text="@string/cancel" />

            </LinearLayout>

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/login_VIA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_gmail"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/google_login" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayoute>

</FrameLayout>
