<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.duyle.news.GuestLoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary1"
        android:backgroundTint="@color/colorPrimary1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/pad_20dp"
            android:paddingLeft="@dimen/pad_15dp"
            android:paddingRight="@dimen/pad_15dp"
            android:paddingTop="@dimen/pad_20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="300dp"
                android:layout_height="220dp"
                android:src="@drawable/icon_news_logo"
                android:layout_marginBottom="@dimen/pad_20dp" />

            <EditText
                android:id="@+id/ed_email"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_email"
                android:hint="@string/usernameEmail"
                android:inputType="textEmailAddress"
                >
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/ed_password"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="@dimen/pad_20dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword" >
            </EditText>

            <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnLogin"
                    android:backgroundTint="@color/accent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:text="@string/log_in" />


            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/pad_20dp"
                android:layout_marginBottom="@dimen/pad_30dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Đăng ký"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/pad_5dp"
                    android:textAlignment="center"
                    android:onClick="true"
                    android:autoLink="web"
                    android:textColor="@color/text_color"
                    android:id="@+id/btnRegister" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/pad_80dp"
                    android:text="Quên mật khẩu!"
                    android:textAlignment="center"
                    android:onClick="true"
                    android:autoLink="web"
                    android:textColor="@color/text_color"
                    android:id="@+id/link_reset_password" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>
